aligned the navbar links properly on desktop screen fixed the bug, remaining mobile and other screens

--- a/styles/index/index.scss
+++ b/styles/index/index.scss
@@ -10,15 +10,24 @@ html {
 
 
 // NAVIGATION BAR STYLES
+header{
 #sect{
+    // display: grid;
+    // grid-column: 10% 90%;
+    // justify-content: space-evenly;
     .log{
-        margin-left: 10%;
+        margin-left: 11%;
         img{
            
         }
     }
     .exp-colapse  {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: flex-end;
+        margin-right: 17%;
         .no{
+            // margin-top: -10%;
             .ni{
                 a[about]{
                     margin-left: 7rem;
@@ -43,7 +52,7 @@ html {
             .right-btn{
                 a{
                     button[type="submit"]{
-                        width: 240px;
+                        width: 205%;
                         height: 50px;
                         box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.15);
                         border-radius: 10px;
@@ -64,7 +73,7 @@ html {
 
     }
 }
-
+}
 // RESPONSIVE
 @media(max-width: 414px){
     #sect{
@@ -1100,6 +1109,21 @@ footer{
         }
     }
 }
+}
+@media only screen and (max-width: 800px){
+    header {
+        #sect {
+            .exp-colapse{
+                .right-btn{
+                    a{                        
+                        button[type="submit"]{
+                            display: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 // Mobile screen
 @media only screen and (max-device-width: 400px){
